--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "world-names"
-version = "0.0.3"
+name = "worldnames"
+version = "0.0.4"
 authors = [
   { name="Ayoub ben Abdessadak", email="ayoubabdessadak1@gmail.com" },
 ]
